--- a/views/home.html
+++ b/views/home.html
@@ -29,26 +29,43 @@
                     </div>
                 </div>
             </div>
-          <div class="col-md-4">
-              <div class="skill-menu" ng-click="reveal()"><h4>Web Development</h4>
+            
+          <h1 class="text-center white-light">Skills</h1>
+          <hr>
+          <br>
+            
+          <div class="col-md-4 col-sm-6">
+              <div class="skill-menu">
                 
-                <p class="info" style="display:none">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <i class="fa fa-code fa-4x about-icon" aria-hidden="true"></i>
+                
+                <h3>Web Development</h3>
+                
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 
               </div>
           </div>
           
-          <div class="col-md-4">
-              <div class="skill-menu" ng-click="reveal()"><h4>Graphic Design</h4>
+          <div class="col-md-4 col-sm-6">
+              <div class="skill-menu">
+              
+                  <i class="fa fa-object-ungroup fa-4x about-icon" aria-hidden="true"></i>
+                  
+                  <h3>Graphic Design</h3>
                 
-                <p class="info" style="display:none">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 
               </div>
           </div>
           
-          <div class="col-md-4">
-              <div class="skill-menu" ng-click="reveal()"><h4>Writing</h4>
+          <div class="col-md-4 col-sm-12">
+               <div class="skill-menu">
+              
+               <i class="fa fa-pencil fa-4x about-icon" aria-hidden="true"></i>
+               
+               <h3>Writing</h3>
                 
-                <p class="info" style="display:none">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 
               </div>
           </div>
