Head image changed and footer added

--- a/views/home.html
+++ b/views/home.html
@@ -1,12 +1,12 @@
 <div class="container-fluid head">
 	<div class="row col-lg-12">
-		<div class ="header-content">
+		<div class="header-content">
         
-            <img src="https://s1.postimg.org/ntbwk2g1b/image.jpg" class="me">
     		<h1 class="white">Ali Pokrywka</h1>
             <h4 class="white">(poh-krif-kah)</h4>
-            <hr>
-    		<h3 class="white">Front-End Web Developer | Graphic Designer | Writer</h3>
+    		<h3 class="white">Front-End Web Developer
+    		<br>Graphic Designer
+    		<br>Writer</h3>
     				
     </div>
   </div>
