--- a/styles/style.css
+++ b/styles/style.css
@@ -4,21 +4,25 @@ html {
 }
 
 body {
-    font-family: Lato;
+    font-family: 'Open Sans';
+}
+
+h1 {
+  font-weight: 600;
 }
 
 .page-content {
   position: relative;
-  top: -20px;
   background-color: #675b72;    
 }
 
-.me {
-  border-radius: 50%;
-  height: 150px;
-  width: 150px;
-  margin-bottom:10px;
-  border: 3px solid #f8f8f8;
+.navbar {
+    margin-bottom: 0;
+}
+
+.navbar-brand {
+  font-family: 'Megrim';
+  font-size: x-large;
 }
 
 .white {
@@ -29,15 +33,22 @@ body {
 }
 
 .head {
-  background: url(https://s12.postimg.org/o2btlwhy5/freestocks-org-175144.jpg?dpr=2&fit=crop&fm=jpg&h=775&q=50&w=1450);
+  background: linear-gradient(to right, rgba(65, 59, 71, .95), rgba(255, 61, 213, 0.6), rgba(65, 59, 71, .95)), 
+  url('https://s18.postimg.org/qswwla0l5/portpic.jpg') no-repeat;
 	background-size: cover;
-	background-position: center;  
+	background-position: center center; 
+}
+
+.glow {
+  box-shadow:
+        0 15px 70px -15px #fff,            /* outer white */
+        0 10px 80px -15px #8c007e       /* outer magenta */
 }
 
 .header-content {
-	text-align: center;
-	padding-top: 10%;
-	padding-bottom: 5%;
+	text-align: justify;
+	padding: 2% 0 5% 5%;
+	height:400px;
 	text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
 				0px 8px 13px rgba(0,0,0,0.1),
 				0px 18px 23px rgba(0,0,0,0.1);
@@ -102,4 +113,23 @@ hr {
 	width: 300px;
 	border-top: 1px solid #f8f8f8;
 	border-bottom: 1 px solid rgba(0,0,0,.2);
+}
+
+.footer {
+    position: static;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height:60px;
+    background-color: #413b47;
+    color: white;
+    text-align: center;
+    line-height: 60px;
+    font-size: 1.2em;
+    padding-right: 40px;
+}
+
+.footer .fa {
+  margin-left: 7px;
+  margin-right: 7px;
 }
