--- a/views/nav.html
+++ b/views/nav.html
@@ -8,14 +8,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Ali Pokrywka</a>
+      <a class="navbar-brand" href="#">AP</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="nav-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="#">Home</a></li>
-       	<li><a href="#">About</a></li>
+        <li class="active"><a href="#">About</a></li>
+       	<li><a href="#">Work</a></li>
+       	<li><a href="#">Resumé</a></li>
        	<li><a href="#">Contact</a></li>
       </ul>
      
