--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
+/*GENERAL*/
+
 html {
     height: 100%;
     margin:0;
@@ -13,17 +15,23 @@ h1 {
 
 .page-content {
   position: relative;
-  background-color: #675b72;    
+  background-color: #e2e1e0;    
 }
 
+/*NAV*/
+
 .navbar {
-    margin-bottom: 0;
+  margin-bottom: 0;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  z-index: 2;
 }
 
 .navbar-brand {
   font-family: 'Megrim';
   font-size: x-large;
 }
+
+/*HOME*/
 
 .white {
     color: #f8f8f8;
@@ -39,10 +47,8 @@ h1 {
 	background-position: center center; 
 }
 
-.glow {
-  box-shadow:
-        0 15px 70px -15px #fff,            /* outer white */
-        0 10px 80px -15px #8c007e       /* outer magenta */
+.shadow {
+  box-shadow: 0 20px 18px -18px rgba(0,0,0,0.16), 0 16px 16px -16px rgba(0,0,0,0.23);
 }
 
 .header-content {
@@ -54,11 +60,27 @@ h1 {
 				0px 18px 23px rgba(0,0,0,0.1);
 }
 
-.white-light {
-  color: #f8f8f8;
-  text-shadow: 0px 4px 3px rgba(0,0,0,0.1),
-				0px 8px 13px rgba(0,0,0,0.1),
-				0px 18px 23px rgba(0,0,0,0.1);
+.header-content h1 {
+margin-bottom:-.1em;
+}
+
+.header-content h3 {
+  line-height: 1.2em;
+}
+
+p, h3, .body-h1 {
+    color: #5d506b;
+}
+
+.hr-style {
+	width: 300px;
+	border-top: 1px solid #a991c4;
+	border-bottom: 1px solid rgba(0,0,0,.2);
+}
+
+.hr-left {
+  text-align:left;
+  margin-left:0;
 }
 
 .cropcircle {
@@ -70,6 +92,7 @@ h1 {
     border: 3px solid #f8f8f8;
     margin-right:17px;
     margin-bottom:10px;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
 #about-img {
@@ -79,7 +102,8 @@ h1 {
 .alt-section {
   margin:0 auto;
   padding: 20px 20px 0px 20px;
-  background: #7a757f;
+  background: url('https://s18.postimg.org/3o9xf85jt/absurdidad.png'),
+  #F8F8F8;
   padding-bottom:15px;
 }
 
@@ -98,10 +122,14 @@ h1 {
   max-width: 425px;
   margin: 20px auto;
   border-radius: 8px;
-  background: #efefef;
-  color: #4e4556;
+  background: #fff;
   padding: 20px;
-  box-shadow: 1px 1px 13px #4a3a54;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.skill-menu:hover {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .about-icon {
@@ -109,11 +137,7 @@ h1 {
   margin: 5px auto -.2em auto;
 }
 
-hr {
-	width: 300px;
-	border-top: 1px solid #f8f8f8;
-	border-bottom: 1 px solid rgba(0,0,0,.2);
-}
+/*FOOTER*/
 
 .footer {
     position: static;
@@ -122,11 +146,16 @@ hr {
     width: 100%;
     height:60px;
     background-color: #413b47;
-    color: white;
     text-align: center;
-    line-height: 60px;
+    display: table;
+    line-height: 1.5em;
     font-size: 1.2em;
-    padding-right: 40px;
+}
+
+.footer p {
+  color: #eee;
+  display: table-cell;
+  vertical-align: middle;
 }
 
 .footer .fa {
