--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,5 @@
 <div class="container-fluid head">
-	<div class="row col-lg-12">
+	<div class="row col-lg-12 shadow">
 		<div class="header-content">
         
     		<h1 class="white">Ali Pokrywka</h1>
@@ -19,19 +19,19 @@
                 <div class="container cont-box">
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <h1 class="text-center white-light">About Me</h1>
-                            <hr>
+                            <h1 class="text-left"style="margin-left:25px">About Me</h1>
+                            <hr class="hr-style hr-left">
                             <br>
                             <div id="about-img" class="cropcircle pull-left"></div>
-                            <p class="off-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                            <p class="off-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                         </div>
                     </div>
                 </div>
             </div>
             
-          <h1 class="text-center white-light">Skills</h1>
-          <hr>
+          <h1 class="text-center">Skills</h1>
+          <hr class="hr-style">
           <br>
             
           <div class="col-md-4 col-sm-6">
@@ -69,6 +69,6 @@
                 
               </div>
           </div>
-          
+          </div>
         </div>
  </section>
